Update code to use hidden class and add more styling

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   </head>
   <body>
     <div id="game">
-      <p>Make your choice:</p>
+      <h2>Make your choice:</h2>
       <button id="rock">Rock</button>
       <button id="paper">Paper</button>
       <button id="scissors">Scissors</button>
     </div>
 
-    <div id="result-screen" style="display: none">
+    <div id="result-screen" class="hidden">
       <p id="result"></p>
       <button id="play-again-button">Play Again!</button>
     </div>
