Add font styling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div id="game">
-      <h2>Make your choice:</h2>
+      <p>Choose Your Weapon...</p>
       <button id="rock">Rock</button>
       <button id="paper">Paper</button>
       <button id="scissors">Scissors</button>
