--- a/index.html
+++ b/index.html
@@ -10,6 +10,32 @@
   </head>
   <body>
     <div id="game">
+      <p id="choose-mssg">Choose Your Weapon...</p>
+      <button id="rock">Rock</button>
+      <button id="paper">Paper</button>
+      <button id="scissors">Scissors</button>
+    </div>
+
+    <div id="result-screen" class="hidden">
+      <p id="result"></p>
+      <button id="play-again-button">Play Again!</button>
+    </div>
+  </body>
+</html>
+
+<!--
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <script src="index.js" defer></script>
+  </head>
+  <body>
+    <div id="game">
       <p>Choose Your Weapon...</p>
       <button id="rock">Rock</button>
       <button id="paper">Paper</button>
@@ -22,3 +48,4 @@
     </div>
   </body>
 </html>
+-->
